# PythonDL

./: .coverage  .env.example  .gitignore  Dockerfile  ReadMe.md  alembic.ini  app.py  docker-compose.yml  gunicorn.conf.py  init.sh  main.py  pyproject.toml  pyrightconfig.json  settings.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 20260211_1000_create_users_table.py  20260211_1001_create_roles_table.py  20260211_1002_create_permissions_table.py  20260211_1003_create_role_permissions_table.py  20260211_1004_create_stock_basics_table.py  20260211_1005_create_stocks_table.py  20260211_1006_create_weather_table.py  20260211_1007_create_face_readings_table.py  20260211_1008_create_fortune_tellings_table.py  20260211_1009_create_consumption_data_table.py  20260211_1010_create_economic_indicators_table.py  20260215_1000_add_system_config_and_log_tables.py  create_bazi.py  create_consumption.py  create_consumption_categories.py  create_consumption_forecasts.py  create_face_reading.py  create_fortune_telling.py  create_weather.py  create_weather_forecasts.py  create_weather_stations.py
app/: __init__.py
app/admin/api/: __init__.py  dashboard.py  permissions.py  roles.py  system_configs.py  system_logs.py  users.py
app/admin/services/: __init__.py  dashboard_service.py  permission_service.py  role_service.py  system_config_service.py  system_log_service.py  user_service.py
app/api/: __init__.py
app/api/v1/: __init__.py  admin.py  ai_crawler.py  auth.py  consumption.py  consumption_trends.py  crawler.py  crawler_task.py  crawler_tasks.py  exports.py  face_analysis.py  finance.py  fortune.py  notifications.py  search.py  weather.py
app/core/: auth.py  cache.py  config.py  data_files.py  database.py  deps.py  email.py  exceptions.py  export.py  export_files.py  logger.py  monitoring.py  pydantic_utils.py  rate_limit.py  redis_client.py  response.py  security.py  temp_files.py
app/core/middleware/: logging.py
app/demo_lstm/: __init__.py  house_wave.py  see_font.py  sin_function.py  sin_line.py  sin_wave.py
app/models/: __init__.py
app/models/admin/: __init__.py  alert.py  analysis.py  crawler_task.py  data_source.py  notification.py  operation_log.py  permission.py  role.py  role_permission.py  system_config.py  user.py
app/models/consumption/: __init__.py  community_data.py  consumption_category.py  consumption_datum.py  consumption_forecast.py  economic_indicator.py  gdp_data.py  population_data.py
app/models/finance/: __init__.py  stock.py  stock_basic.py  stock_prediction.py  stock_risk_assessment.py
app/models/fortune/: __init__.py  bazi.py  constellation.py  (+6 more)
app/schemas/: admin.py  auth.py  consumption.py  finance.py  fortune.py  weather.py
app/services/: search_service.py
app/templates/: crawler_display.html
config/: __init__.py
config/default/: settings.yml
docs/: API_REFERENCE.md  BACKEND_COMPLETE.md  FILES.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  architecture.md
frontend/: DEPLOYMENT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
scripts/: scan_api_fields.py
tests/: conftest.py
tests/api/: base.py  test_finance.py  test_weather.py
(+175 files in other folders)
