[project]
name = "pythondl"
version = "0.1.0"
description = "python deep learn"
readme = "ReadMe.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "poetry>=2.2.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.2",
]
# 主索引源（优先级最高）
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# 备用索引源（主源找不到时用）
extra-index-url = ["https://pypi.org/simple/"]
# 可选：禁用默认的 PyPI 源（避免冗余）
no-default-index = true
